welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: type mismatch;
 found   : (Int, Int)
 required: Boolean
     while( i ->  nums.length) {
              ^